# yjs-widgets

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: check-release.yml
examples/simple-yjs-widget/: CONTRIBUTING.md  README.md  install.json  package.json  pyproject.toml  tsconfig.json
examples/simple-yjs-widget/notebooks/: simple.ipynb
examples/simple-yjs-widget/simple_yjs_widget/: __init__.py
examples/simple-yjs-widget/src/: index.ts
examples/yjs-widget-controls/: CONTRIBUTING.md  LICENSE  README.md  install.json  package.json  pyproject.toml
examples/yjs-widget-controls/notebooks/: simple.ipynb
examples/yjs-widget-controls/src/: index.ts
examples/yjs-widget-controls/yjs_widget_controls/: __init__.py
src/: index.ts  model.ts  types.ts
src/notebookrenderer/: index.ts  model.ts  types.ts  view.ts  widgetManager.ts  yCommProvider.ts
src/yinputwidget/: index.ts
src/youtputhandler/: index.ts  yWidget.ts
src/youtputwidget/: index.ts
style/: base.css
yjs_widgets/: __init__.py
